RESOLVED FIXED 153666
Modern IDB: Getting records for key ranges with null keys isn't properly handled in SQLite backend
https://bugs.webkit.org/show_bug.cgi?id=153666
Summary Modern IDB: Getting records for key ranges with null keys isn't properly hand...
Brady Eidson
Reported 2016-01-29 13:25:09 PST
Modern IDB: Getting records for key ranges with null keys aren't properly handled in SQLite backend
Attachments
Patch v1 (3.57 KB, patch)
2016-01-29 13:26 PST, Brady Eidson
thorton: review+
Brady Eidson
Comment 1 2016-01-29 13:26:29 PST
Created attachment 270247 [details] Patch v1
Tim Horton
Comment 2 2016-01-29 13:32:14 PST
Comment on attachment 270247 [details] Patch v1 View in context: https://bugs.webkit.org/attachment.cgi?id=270247&action=review > Source/WebCore/ChangeLog:3 > + Modern IDB: Getting records for key ranges with null keys aren't properly handled in SQLite backend I think you meant "isn't"
Brady Eidson
Comment 3 2016-01-29 15:25:06 PST
Note You need to log in before you can comment on or make changes to this bug.