Modern IDB: Getting records for key ranges with null keys aren't properly handled in SQLite backend https://bugs.webkit.org/show_bug.cgi?id=153666

Reviewed by Tim Horton.

Source/WebCore:

No new tests (Two failing tests now pass).

* Modules/indexeddb/server/SQLiteIDBBackingStore.cpp:
(WebCore::IDBServer::SQLiteIDBBackingStore::getRecord):

LayoutTests:

* platform/mac-wk1/TestExpectations:

Canonical link: https://commits.webkit.org/171736@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@195850 268f45cc-cd09-0410-ab3c-d52691b4dbfc